--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>For Tongs</title>
+        <title>For Tong</title>
         <style type="text/css">
             @font-face {
                 font-family: "Kimberley";
@@ -51,12 +51,20 @@
     <body>
         <div class="container">
             <div class="main">
+              <div>DEAR 快乐小飞侠:</div></br>
             	<div>THANK YOU FOR YOUR ACCOMPANY FOR</div></br>
+              <img src="photo.png" alt="photo" style = "float: right" width=46%>
                 <div id="days">days</div>
                 <div id="hours">hours</div>
                 <div id="minutes">minutes</div>
                 <div id="seconds">seconds</div></br>
                 <div>YOU ARE MY GALAXY MAN❤️</div>
+
+
+
+
+                <!-- <img src="photo.png" alt="photo" width=25%> -->
+
                 <!-- <div>let us</div>
                 <div>grow old</div>
                 <div>together.</div> -->
